Fix empty fav overflow

--- a/src/favourites/EmptyFav.scss
+++ b/src/favourites/EmptyFav.scss
@@ -3,6 +3,7 @@
 .message {
   text-align: center;
   padding: 42vh 2rem 4rem 2rem;
+  overflow: hidden;
 }
 
 .message__text {
